chore: do some fixes related to dropdown and navbar out of screen

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -124,6 +124,10 @@ p:not([class]) {
  * Navbar
  */
 
+.max-w-screen {
+  max-width: 100vw;
+}
+
 .navbar-item {
   @apply px-3 py-3 rounded-lg text-sm font-medium text-gray-300 dark:text-coolGray-800 hover:text-white focus:outline-none focus:ring transition-light-dark;
 
@@ -159,6 +163,17 @@ p:not([class]) {
 .navbar-fade-leave-to {
   opacity: 0;
   transform: translateX(var(--tw-translate-x)) translateY(-1rem);
+}
+
+/*
+ * Language selector
+ */
+
+@media (min-width: 640px) {
+  .language-selector-max-height {
+    // 7rem = 4rem (navbar height) + 2rem (navbar top) + 1rem (this dropdown top)
+    max-height: calc(100vh - 7rem);
+  }
 }
 
 /*
